--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,7 +14,8 @@
     "react-scroll": "^1.8.2",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.3.0",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "webkit-npm": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
