--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-transition-group": "^4.4.1",
+    "sass": "^1.35.2",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.1",
     "webkit-npm": "^3.1.1"
