--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "classnames": "^2.3.1",
-    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -15,6 +14,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-transition-group": "^4.4.1",
+    "sass": "^1.35.2",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.1",
     "webkit-npm": "^3.1.1"
