--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "builder": "react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,6 +44,6 @@
     ]
   },
   "devDependencies": {
-    "netlify-cli": "^5.2.2"
+    "netlify-cli": "^5.2.3"
   }
 }
